Refine heading/port layout constants and fix port vertical alignment
Add HEADING_PADDING_BLOCK/INLINE constants, use them for node title and
delete button positioning. Fix port cy to include PORT_RADIUS offset for
proper vertical centering. Use transparent stroke on ports, fix indentation
in GraphPort event handlers.

--- a/src/components/GraphNode.module.css
+++ b/src/components/GraphNode.module.css
@@ -12,6 +12,8 @@
 
 .nodeHeader {
   position: relative;
+  display: grid;
+  grid-template-columns: 1fr min-content;
   background: color-mix(in srgb, var(--color-node), white 95%);
   border-bottom: 1px solid color-mix(in srgb, var(--color-node), white 60%);
 }
@@ -19,8 +21,8 @@
 .nodeTitle {
   font-size: 12px;
   color: var(--color-text);
-  padding-left: calc(var(--content-padding-inline) + var(--port-radius));
-  line-height: 20px;
+  padding-left: var(--heading-padding-inline);
+  padding-top: var(--heading-padding-block);
 }
 
 .nodeContent {
@@ -33,8 +35,8 @@
 
 .deleteButton {
   position: absolute;
-  top: var(--content-padding-inline);
-  right: var(--content-padding-inline);
+  right: var(--heading-padding-block);
+  top: var(--heading-padding-block);
   width: 15px;
   height: 15px;
   padding: 0px;
